# TaskFlow-Platform

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 53dd00806d08_add_users_tasks_and_activities.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: activities.py  auth.py  dashboard.py  health.py  router.py  tasks.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/dependencies/: auth.py  services.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  activity.py  enums.py  task.py  user.py
backend/app/repositories/: __init__.py  activity_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: activities.py  auth.py  common.py  dashboard.py  tasks.py
backend/app/services/: auth_service.py  task_service.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_health.py  test_phase2_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: router.tsx
frontend/src/components/brand/: logo.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/features/auth/: login-page.tsx  schemas.ts
frontend/src/features/common/: coming-soon-page.tsx  not-found-page.tsx
frontend/src/lib/: api-client.ts
frontend/src/styles/: globals.css
(+6 files in other folders)
