[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-platform-api"
version = "0.1.0"
description = "Production-ready FastAPI backend for TaskFlow Platform"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13,<2.0",
    "bcrypt>=4.1,<5.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1.0", "pytest>=8.0,<9.0", "pytest-cov>=5.0,<6.0", "ruff>=0.8,<1.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
